<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/waveform_frame"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/dark_gray_0"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_play"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:background="@drawable/circle_with_white_bg"
        app:layout_constraintBottom_toBottomOf="@+id/waveform_frame"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="@+id/waveform_frame"
        app:layout_constraintStart_toStartOf="@+id/waveform_frame"
        app:layout_constraintTop_toBottomOf="@+id/waveform_frame"
        app:srcCompat="@drawable/play_record_48dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
            android:id="@+id/btn_pause"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:background="@drawable/circle_with_white_bg_pause"
            app:layout_constraintBottom_toBottomOf="@+id/waveform_frame"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@+id/waveform_frame"
            app:layout_constraintStart_toStartOf="@+id/waveform_frame"
            app:layout_constraintTop_toBottomOf="@+id/waveform_frame"
            app:srcCompat="@drawable/pause_record_48dp"
            android:visibility="gone"
            tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/is_this_ok_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

    <ImageView
            android:id="@+id/icon_hash"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:layout_constraintDimensionRatio="w,1:3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/btnRedo"
            app:srcCompat="@android:drawable/btn_dialog"/>

    <Button
            android:id="@+id/btnRedo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:drawableRight="@drawable/ic_redo_blue_36dp"
            android:paddingHorizontal="24dp"
            android:text="@string/txt_btn_redo"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/icon_hash"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

    <Button
            android:id="@+id/btnYes"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:drawableRight="@drawable/ic_check_white_36dp"
            android:paddingHorizontal="24dp"
            android:text="@string/txt_btn_yes"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/icon_hash"
            app:layout_constraintStart_toEndOf="@+id/btnRedo"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>